--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
     </ul>
   </nav>
   <a href="/" class="header-logo"
-    ><img src="https://github.com/lunar1000/begin-css/tree/main/images/logo.png" alt="Learn Enough"
+    ><img src="images/logo.png" alt="Learn Enough"
   /></a>
 </header>
