--- a/css/main.css
+++ b/css/main.css
@@ -162,17 +162,30 @@ p {
 /* HOMEPAGE STYLES */
 /* home callout */
 .home-callout {
+  /* align-items: flex-start; */
+  /* align-items: flex-end; */
+  align-items: center;
   background-color: #000;
   color: #fff;
+  display: flex;
   padding: 7vh 0;
 }
+.home-callout h3 {
+  color: inherit;
+  margin-top: 1em;
+}
 .home-callout .callout-title {
+  flex-basis: 0;
+  flex-grow: 1;
   font-size: 5.75vw;
   text-align: right;
   text-transform: uppercase;
 }
-.home-callout .callout-copy {
+.callout-copy {
+  flex-basis: 45em;
+  flex-shrink: 0;
   font-size: 0.8rem;
+  padding: 0 3vw;
 }
 /* home section */
 .home-section {
