--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <a class="footer-logo" href="/">
     <img src="/images/logo.png" alt="Learn Enough" />
   </a>
-  <nav class="footer-nav">
-    <ul class="nav-links">
+  <nav>
+    <ul class="footer-nav nav-links">
       {% include nav-links.html %}
     </ul>
   </nav>
