--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ p {
 .footer h3 span {
   color: #aaa;
 }
-.footer-nav li {
+.footer-nav > li {
   display: inline-block;
   margin: 2em 1em 0;
 }
@@ -450,6 +450,121 @@ h2 ~ p {
   font-size: 0.8em;
   margin-top: 3em;
   padding-top: 2em;
+}
+/* DROP STYLES*/
+
+.drop-menu {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  display: none;
+  list-style: none;
+  padding: 1em 0 0;
+  position: absolute;
+  right: 0;
+  z-index: 9;
+}
+.drop-menu:before {
+  border: 0.6em solid;
+  border-color: transparent transparent #fff;
+  content: '';
+  height: 0;
+  position: absolute;
+  right: 1em;
+  top: -0.1em;
+  width: 0;
+}
+.drop-menu li {
+  background-color: #fff;
+}
+.drop-menu li + li {
+  border-top: 1px dotted rgba(0, 0, 0, 0.1);
+}
+.drop-menu li:first-child {
+  border-radius: 5px 5px 0 0;
+  color: #999;
+  font-size: 0.5em;
+  padding: 1em 1em 0.25em;
+  text-align: right;
+  text-transform: uppercase;
+}
+.drop-menu li:last-child {
+  border-radius: 0 0 5px 5px;
+}
+.drop-menu a {
+  color: #333;
+  display: block;
+  font-weight: normal;
+  padding: 0.5em 2em 0.5em 1em;
+  text-align: left;
+  text-transform: none;
+  white-space: nowrap;
+}
+.drop-menu a:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #333;
+}
+/* DRIPDOWN STYLES */
+.dropdown {
+  position: relative;
+}
+.dropdown:hover .drop-menu {
+  display: block;
+}
+.dropdown:hover .drop-trigger:after {
+  border-color: #ed6e2f transparent transparent;
+}
+.drop-trigger {
+  display: inline-block;
+  padding-right: 1.5em;
+  position: relative;
+}
+.drop-trigger:after {
+  border: 0.3em solid;
+  border-color: #fff transparent transparent;
+  content: '';
+  height: 0;
+  position: absolute;
+  right: 0;
+  top: 0.3em;
+  width: 0;
+}
+/* HIDE IN THE FOOTER */
+/*.footer .dropdown:hover .drop-menu,
+.footer .drop-trigger:after {
+  display: none;
+}
+.footer .drop-trigger {
+  padding-right: 0;
+}*/
+.footer .dropdown {
+  display: inline-flex;
+  flex-direction: column-reverse;
+}
+.footer .dropdown .drop-menu:before {
+  padding: 0 0 1em;
+}
+.footer .drop-menu {
+  bottom: 1em;
+  padding-bottom: 1em;
+}
+.footer .dropdown .drop-menu:after {
+  position: absolute;
+  border: 0.6em solid;
+  border-color: #fff transparent transparent;
+  content: '';
+  right: 1em;
+  width: 0;
+  height: 0;
+}
+.footer .drop-menu li:first-child {
+  border-radius: 5px 5px 0 0;
+  color: #999;
+  font-size: 0.5em;
+  padding: 1em 1em 0.25em;
+  text-align: right;
+  text-transform: uppercase;
+}
+.footer .drop-menu li:last-child {
+  border-radius: 0 0 5px 5px;
 }
 
 /* 미디어 쿼리 */
