--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,33 @@
 <head>
+  {% if page.title %}
+  <title>{{ page.title }} | Test Page</title>
+  {% else %}
   <title>Test Page: Don’t Panic</title>
+  {% endif %} {% if page.description %}
+  <meta name="description" content="{{ page.description }}" />
+  {% else %}
+  <meta name="description" content="This is a dangerous site." />
+  {% endif %} {% if page.og_title %}
+  <meta property="og:title" content="{{ page.og_title }} | Test Page" />
+  {% else %}
+  <meta property="og:title" content="Test Page: Don’t Panic" />
+  {% endif %} {% if page.og_description %}
+  <meta property="og:description" content="{{ page.og_description }}" />
+  {% else %}
+  <meta property="og:description" content="This is a dangerous site." />
+  {% endif %}
+  <link rel="icon" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/reset.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@100&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    rel="stylesheet"
+  />
   <link rel="stylesheet" href="/css/main.css" />
 </head>
