--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,15 @@ html,
 body {
   display: flex;
   flex-direction: column;
-  font-family: helvetica, arial, sans;
+  font-family: 'Open sans', helvetica, arial, sans;
   min-height: 100vh;
 }
 html {
   box-shadow: 0 0 0 30px #000 inset;
   padding: 0 30px;
+}
+h1,h2,h3,h4,h5,h6{
+  font-family: 'Raleway', helvetical, sans;
 }
 h1 {
   font-size: 7vw;
@@ -222,15 +225,15 @@ p {
   color: #fff;
   display: inline-block;
   font-family: helvetica, arial, sans;
-  font-size: 1rem;
+  font-size: 1.7em;
   font-weight: bold;
-  height: 2.5em;
+  height: 1.5em;
   line-height: 1;
-  padding-top: 0.85em;
+  padding-top: 0.25em;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  width: 2.5em;
+  width: 1.5em;
 }
 .social-list {
   list-style: none;
